# ccminer

./: .gitignore  CMakeLists.txt  README.txt  algos.h  api.cpp  bench.cpp  bignum.cpp  ccminer.cpp  miner.h  nvapi.cpp  scrypt.cpp  util.cpp
compat/: gettimeofday.c  unistd.h
crypto/: int128_c.h  wildkeccak-cpu.cpp
phi/: phi2.cu
res/: ccminer.rc
scripts/: build-linux.sh
